src/objects/Page_Layout_Field__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <referenceTo>Field__c</referenceTo>
        <relationshipLabel>Page Layout Fields</relationshipLabel>
        <relationshipName>Page_Layout_Fields</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Page_Layout__c</fullName>
        <label>Page Layout</label>
        <referenceTo>Page_Layout__c</referenceTo>
        <relationshipLabel>Page Layout Fields</relationshipLabel>
        <relationshipName>Page_Layout_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Page Layout Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Page_Layout__c</columns>
        <columns>Field__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Layout Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>